<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wielgus.pamoapp.DictionaryActivity"
    android:background="@drawable/ground_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dictionary_pagetitle"
        android:id="@+id/textView5"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fffaf8ff"
        android:textSize="35dp"
        android:textIsSelectable="false" />
    <EditText
        android:id="@+id/entry_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_lbl"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/entry_field"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:background="#ff4f0243" />
    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_lbl"
        android:layout_below="@id/save_button"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#FF4F0243"
        android:textColor="#ffffffff"
        android:width="150dp" />
    <TextView
        android:id="@+id/items_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items_lbl"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/clear_button"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff4067" />
    <TextView
        android:id="@+id/items_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_below="@id/items_lbl"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="40dp" />

</RelativeLayout>
